# agent-kit

./: .env.example  .gitignore  PUBLISHING.md  README.md  REGISTRY_SUBMISSIONS.md  SECURITY.md  deployments.autotopup-mainnet.json  deployments.disperser-mainnet.json  deployments.keeper-registry-mainnet.json  deployments.mainnet.json  deployments.rns-mainnet.json  deployments.testnet.json  deployments.upgradeable.mainnet.json  deployments.upgradeable.testnet.json  hardhat.config.js  package-lock.json  package.json
.openzeppelin/: unknown-1370.json  unknown-1371.json
contracts/: AgentBootHelper.sol  AgentMemory.sol  AgentPermissions.sol  AgentReputation.sol  AgentTreasury.sol  AgentWallet.sol  KeeperRegistry.sol  MultiSigWallet.sol  RamaAutoTopUp.sol  RamaDisperser.sol  SLAInsurancePool.sol  Scheduler.sol
create-ramestta-agent/: index.js  package.json
demo/: DEMO_SCRIPT.md  run-demo.js
docs/: AGENTS.md  MCP.md  llms-full.txt  llms.txt  openapi.yaml
examples/: README.md  claude-desktop.md  crewai-agent.py  cursor-mcp.md  gemini-a2a.md  langchain-remote.py  openai-agents-mcp.py  openai-responses-remote.py  quickstart.md
keeper/: MULTI_NODE.md  install-keeper.sh  keeper.js
marketing/: LAUNCH.md  awesome-entries.md
mcp-server/: README.md  package.json  server.js  server.json  smithery.yaml
sdk/: LICENSE  (+4 more)
sdk-py/: README.md  pyproject.toml  requirements.txt  test_live.py
sdk-py/ramestta_agent_kit/: __init__.py  crewai.py  langchain.py  mesh.py  olas.py  openai_agents.py
sdk-py/ramestta_agent_kit.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
(+98 files in other folders)
