[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ramestta-agent-kit"
version = "0.2.1"
description = "Deploy your AI agent to Ramestta in one line — .rama identity, wallet, sponsored gas, scheduled execution, encrypted messaging"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Ramestta" }]
keywords = ["ramestta", "ai-agents", "evm", "web3", "blockchain", "mcp", "autogen", "crewai", "langchain"]
dependencies = [
  "web3>=6.0",
  "eth-account>=0.11",
]

[project.optional-dependencies]
# mesh = encrypted agent-to-agent messaging
mesh = ["cryptography>=42.0", "websockets>=12.0", "requests>=2.28"]
all = ["cryptography>=42.0", "websockets>=12.0", "requests>=2.28"]

[project.urls]
Homepage = "https://agents.ramestta.com"
Documentation = "https://agents.ramestta.com"
Repository = "https://github.com/ramestta"

[tool.setuptools]
packages = ["ramestta_agent_kit"]
